@@ -551,8 +551,20 @@ replace restart {
 } by {
 	; peephole 0ze used hl instead of iy.
 	ld	hl,#%1 + %3
-	ld	%2,(hl)
+	ld	%2, (hl)
 } if notUsed('iy'), notUsed('hl')
+
+replace restart {
+	ld	iy,#%1
+	ld	%2,0 (iy)
+	ld	%3,1 (iy)
+} by {
+	; peephole 0ze' used hl instead of iy.
+	ld	hl,#%1
+	ld	%2, (hl)
+	inc	hl
+	ld	%3, (hl)
+} if notUsed('iy'), notUsed('hl'), operandsNotRelated(%2 'h'), operandsNotRelated(%2 'l')
 
 replace restart {
 	ld	iy,#%1
